@@ -339,6 +339,8 @@ name|doc
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Override
 DECL|method|intersectionSize
 specifier|public
 name|int
@@ -391,6 +393,8 @@ argument_list|)
 return|;
 block|}
 block|}
+annotation|@
+name|Override
 DECL|method|unionSize
 specifier|public
 name|int
@@ -439,6 +443,62 @@ operator|.
 name|unionSize
 argument_list|(
 name|this
+argument_list|)
+return|;
+block|}
+block|}
+annotation|@
+name|Override
+DECL|method|andNotSize
+specifier|public
+name|int
+name|andNotSize
+parameter_list|(
+name|DocSet
+name|other
+parameter_list|)
+block|{
+if|if
+condition|(
+name|other
+operator|instanceof
+name|BitDocSet
+condition|)
+block|{
+comment|// if we don't know our current size, this is faster than
+comment|// size - intersection_size
+return|return
+operator|(
+name|int
+operator|)
+name|OpenBitSet
+operator|.
+name|andNotCount
+argument_list|(
+name|this
+operator|.
+name|bits
+argument_list|,
+operator|(
+operator|(
+name|BitDocSet
+operator|)
+name|other
+operator|)
+operator|.
+name|bits
+argument_list|)
+return|;
+block|}
+else|else
+block|{
+comment|// use BaseDocSet's size-intersection_size
+return|return
+name|super
+operator|.
+name|andNotSize
+argument_list|(
+name|other
 argument_list|)
 return|;
 block|}
