@@ -165,6 +165,26 @@ name|DocSet
 name|other
 parameter_list|)
 function_decl|;
+comment|/**    * Returns the documents in this set that are not in the other set. Neither set is modified - a new DocSet is    * created and returned.    * @return a DocSet representing this AND NOT other    */
+DECL|method|andNot
+specifier|public
+name|DocSet
+name|andNot
+parameter_list|(
+name|DocSet
+name|other
+parameter_list|)
+function_decl|;
+comment|/**    * Returns the number of documents in this set that are not in the other set.    */
+DECL|method|andNotSize
+specifier|public
+name|int
+name|andNotSize
+parameter_list|(
+name|DocSet
+name|other
+parameter_list|)
+function_decl|;
 block|}
 end_interface
 
@@ -533,7 +553,7 @@ name|size
 argument_list|()
 return|;
 block|}
-comment|// TODO: do an efficient implementation
+comment|// subclasses have more efficient implementations
 DECL|method|unionSize
 specifier|public
 name|int
@@ -551,6 +571,72 @@ argument_list|)
 operator|.
 name|size
 argument_list|()
+return|;
+block|}
+DECL|method|andNot
+specifier|public
+name|DocSet
+name|andNot
+parameter_list|(
+name|DocSet
+name|other
+parameter_list|)
+block|{
+name|OpenBitSet
+name|newbits
+init|=
+call|(
+name|OpenBitSet
+call|)
+argument_list|(
+name|this
+operator|.
+name|getBits
+argument_list|()
+operator|.
+name|clone
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|newbits
+operator|.
+name|andNot
+argument_list|(
+name|other
+operator|.
+name|getBits
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+operator|new
+name|BitDocSet
+argument_list|(
+name|newbits
+argument_list|)
+return|;
+block|}
+DECL|method|andNotSize
+specifier|public
+name|int
+name|andNotSize
+parameter_list|(
+name|DocSet
+name|other
+parameter_list|)
+block|{
+return|return
+name|this
+operator|.
+name|size
+argument_list|()
+operator|-
+name|this
+operator|.
+name|intersectionSize
+argument_list|(
+name|other
+argument_list|)
 return|;
 block|}
 block|}
