@@ -478,7 +478,24 @@ name|a2
 argument_list|)
 expr_stmt|;
 comment|// OpenBitSet a_xor = (OpenBitSet)a1.clone(); a_xor.xor(a2);
-comment|// OpenBitSet a_andn = (OpenBitSet)a1.clone(); a_andn.andNot(a2);
+name|OpenBitSet
+name|a_andn
+init|=
+operator|(
+name|OpenBitSet
+operator|)
+name|a1
+operator|.
+name|clone
+argument_list|()
+decl_stmt|;
+name|a_andn
+operator|.
+name|andNot
+argument_list|(
+name|a2
+argument_list|)
+expr_stmt|;
 name|checkEqual
 argument_list|(
 name|a_and
@@ -498,6 +515,18 @@ argument_list|,
 name|b1
 operator|.
 name|union
+argument_list|(
+name|b2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|checkEqual
+argument_list|(
+name|a_andn
+argument_list|,
+name|b1
+operator|.
+name|andNot
 argument_list|(
 name|b2
 argument_list|)
@@ -528,6 +557,21 @@ argument_list|,
 name|b1
 operator|.
 name|unionSize
+argument_list|(
+name|b2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|a_andn
+operator|.
+name|cardinality
+argument_list|()
+argument_list|,
+name|b1
+operator|.
+name|andNotSize
 argument_list|(
 name|b2
 argument_list|)
